--- a/app/src/main/res/layout/new_fragment_portfolio.xml
+++ b/app/src/main/res/layout/new_fragment_portfolio.xml
@@ -48,11 +48,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
+        android:paddingBottom="8dp"
+        android:paddingTop="4dp"
+        android:background="@android:color/black"
         android:layout_gravity="end"
         android:gravity="end"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
